Fix: adjusted the add-insert popup z-index

--- a/css/style_oe3.0.css
+++ b/css/style_oe3.0.css
@@ -1552,7 +1552,7 @@ select.fixed-width {
   position: fixed;
   bottom: 300px;
   right: 0;
-  z-index: 90;
+  z-index: 70;
   background: #374755;
   padding: 10px 10px 50px 10px;
   min-height: 150px;
